--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<h1>{{title}}</h1>
-<hr>
-<app-counter></app-counter>
+
+<app-main-page></app-main-page>
+<!-- <app-counter></app-counter>
 <app-hero-heroes></app-hero-heroes>
-<app-heroes-list></app-heroes-list>
+<app-heroes-list></app-heroes-list> -->
 
